Layout height fixed on smaller screens

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -50,11 +50,6 @@ body {
   .hide-scroll::-webkit-scrollbar-thumb:hover {
     background-color: rgba(155, 155, 155, 0.8);
   }
-
-  /* Layout component height */
-  .layout {
-    min-height: calc(100vh - 64px);
-  }
 }
 
 table {
